crates/fe/tests/fixtures/cli_output/ingots/invalid_toml/invalid_toml_tree.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 528
expression: output
---
=== STDOUT ===
[invalid fe.toml]

=== STDERR ===
Error: Invalid fe.toml in ingot file://<project>/crates/fe/tests/fixtures/cli_output/ingots/invalid_toml/: Failed to parse file://<project>/crates/fe/tests/fixtures/cli_output/ingots/invalid_toml/fe.toml: TOML parse error at line 2, column 20
  |
2 | name = "invalidtoml
  |                    ^
invalid basic string

Error: Failed to parse file://<project>/crates/fe/tests/fixtures/cli_output/ingots/invalid_toml/fe.toml: TOML parse error at line 2, column 20
  |
2 | name = "invalidtoml
  |                    ^
invalid basic string


=== EXIT CODE: 1 ===
